--- a/index.html
+++ b/index.html
@@ -2,7 +2,22 @@
 <html>
 <head><title> ginga counter </title></head>
 <body>
-テスト
 <a href="javascript:(function(){var s=document.createElement('script');s.src='https://gangi-man.github.io/gcounter-v1/dice.js';document.body.appendChild(s);})()">Ginga Bookmarklet v1</a>
+<br>
+
+<h1> Ginga Counter </h1>
+<h2>Ginga Counter とは</h2>
+Ginga Counter はふたば★ちゃんねるのdice機能支援のためのbookmarkletです。
+
+<h2>導入方法</h2>
+ページ上のGinga Counter のリンクをブラウザのブックマークバーにドラッグ＆ドロップする事でブラウザにインストールします。<br>
+dice 機能を使ったふたばのスレッドでインストールしたbookmarkをクリックすることで使用します。
+
+<img src="ginga-instruction.png">
+
+<h2>その他</h2>
+Ginga Counterのソースは<a href="https://github.com/gangi-man/gangi-man.github.io">ここ</a>にあります。
+お友達にも教えてあげて下さいね。
+
 </body>
 </html>
