--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Ginga Counter はふたば★ちゃんねるのdice機能支援のためのbookm
 
 <h2>導入方法</h2>
 ページ上のGinga Counter のリンクをブラウザのブックマークバーにドラッグ＆ドロップする事でブラウザにインストールします。<br>
-dice 機能を使ったふたばのスレッドでインストールしたbookmarkをクリックすることで使用します。
+dice 機能を使ったふたばのスレッドでインストールしたbookmarkをクリックすることで使用します。<br>
 
 <img src="ginga-instruction.png">
 
