--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ Ginga Counter はふたば★ちゃんねるのdice機能支援のためのbookm
 
 <h2>導入方法</h2>
 ページ上のGinga Counter のリンクをブラウザのブックマークバーにドラッグ＆ドロップする事でブラウザにインストールします。<br>
-dice 機能を使ったふたばのスレッドでインストールしたbookmarkをクリックすることで使用します。<br>
+dice 機能を使ったふたばのスレッドでインストールしたbookmarkをクリックすることで使用します。
 
-<img src="ginga-instruction.png">
+<div><img src="ginga-instruction.png"></div>
 
 <h2>その他</h2>
 Ginga Counterのソースは<a href="https://github.com/gangi-man/gangi-man.github.io">ここ</a>にあります。
