--- a/gcounter-v1/index.html
+++ b/gcounter-v1/index.html
@@ -2,10 +2,10 @@
 <html>
 <head><title> ginga counter </title></head>
 <body>
-<a href="javascript:(function(){var s=document.createElement('script');s.src='https://gangi-man.github.io/gcounter-v11/dice.min.js';document.body.appendChild(s);})()">Ginga Bookmarklet v1.1</a><br>
-<a href="javascript:(function(){var s=document.createElement('script');s.src='https://gangi-man.github.io/gcounter-v11/gingalizer.min.js';document.body.appendChild(s);})()">gingalizer v1.1</a><br>
+<a href="javascript:(function(){var s=document.createElement('script');s.src='https://gangi-man.github.io/gcounter-v1/dice.min.js';document.body.appendChild(s);})()">Ginga Bookmarklet v1</a>
+<br>
 
-<h1> Ginga Counter ver1.1</h1>
+<h1> Ginga Counter </h1>
 <h2>Ginga Counter とは</h2>
 Ginga Counter はふたば★ちゃんねるのdice機能支援のためのbookmarkletです。
 
@@ -13,7 +13,7 @@ Ginga Counter はふたば★ちゃんねるのdice機能支援のためのbookm
 ページ上のGinga Counter のリンクをブラウザのブックマークバーにドラッグ＆ドロップする事でブラウザにインストールします。<br>
 dice 機能を使ったふたばのスレッドでインストールしたbookmarkをクリックすることで使用します。
 
-<div><img src="install-ginga.png"></div>
+<div><img src="ginga-instruction.png"></div>
 
 <h2>その他</h2>
 Ginga Counterのソースは<a href="https://github.com/gangi-man/gangi-man.github.io">ここ</a>にあります。
