--- a/index.html
+++ b/index.html
@@ -2,22 +2,14 @@
 <html>
 <head><title> ginga counter </title></head>
 <body>
-<a href="javascript:(function(){var s=document.createElement('script');s.src='https://gangi-man.github.io/gcounter-v1/dice.js';document.body.appendChild(s);})()">Ginga Bookmarklet v1</a>
-<br>
 
-<h1> Ginga Counter </h1>
-<h2>Ginga Counter とは</h2>
-Ginga Counter はふたば★ちゃんねるのdice機能支援のためのbookmarkletです。
+<ul>
+  <li><a href="gcounter-v1/index.html"> ginga counter v1.0 </a></li>
+  <li><a href="gcounter-v11/index.html"> ginga counter v1.1 </a></li>
+  <li><a href="rpg-dice-v1/index.html"> rpg dice v1.0 </a></li>
+</ul>
 
-<h2>導入方法</h2>
-ページ上のGinga Counter のリンクをブラウザのブックマークバーにドラッグ＆ドロップする事でブラウザにインストールします。<br>
-dice 機能を使ったふたばのスレッドでインストールしたbookmarkをクリックすることで使用します。
-
-<div><img src="ginga-instruction.png"></div>
-
-<h2>その他</h2>
-Ginga Counterのソースは<a href="https://github.com/gangi-man/gangi-man.github.io">ここ</a>にあります。
-お友達にも教えてあげて下さいね。
+<a href="https://github.com/gangi-man/gangi-man.github.io">ソース</a>
 
 </body>
 </html>
