--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <body>
 
 <ul>
-  <li><a href="gcounter-v1/index.html"> ginga counter v1.0 </a></li>
   <li><a href="gcounter-v11/index.html"> ginga counter v1.1 </a></li>
+  <li><a href="gcounter-v1/index.html"> ginga counter v1.0 </a></li>
+  <li><a href="rpg-dice-v11/index.html"> rpg dice v1.1 </a></li>
   <li><a href="rpg-dice-v1/index.html"> rpg dice v1.0 </a></li>
 </ul>
 
