check strange behavior on server

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <ul>
   <li><a href="gcounter-v11/index.html"> ginga counter v1.1 </a></li>
   <li><a href="gcounter-v1/index.html"> ginga counter v1.0 </a></li>
-  <li><a href="rpg-dice-v11/index.html"> rpg dice v1.1 </a></li>
+  <!-- <li><a href="rpg-dice-v11/index.html"> rpg dice v1.1 </a></li> -->
   <li><a href="rpg-dice-v1/index.html"> rpg dice v1.0 </a></li>
 </ul>
 
