fix silly bug. Script url was wrong...

--- a/rpg-dice-v11/index.html
+++ b/rpg-dice-v11/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><title> rpg dice 1.1 </title></head>
 <body>
-<a href="javascript:(function(){var%20sid='__rpg_dice_js__';if(!document.getElementById(sid)){var%20s=document.createElement('script');s.id=sid;s.src='https://gangi-man.github.io/rpg-dice-v1/rpg-dice.min.js';document.body.appendChild(s);}else{console.log('hasload');__rpg_dice_counter__();}})()">
+<a href="javascript:(function(){var%20sid='__rpg_dice_js__';if(!document.getElementById(sid)){var%20s=document.createElement('script');s.id=sid;s.src='https://gangi-man.github.io/rpg-dice-v11/rpg-dice.min.js';document.body.appendChild(s);}else{console.log('hasLoaded');__rpg_dice_counter__();}})()">
 rpg dice v1.1</a><br>
 
 <h1> RPG dice ver1.1</h1>
