add rpg-dice sandbox

--- a/rpg-dice-v11/index.html
+++ b/rpg-dice-v11/index.html
@@ -8,17 +8,23 @@ rpg dice v1.1</a><br>
 <h1> RPG dice ver1.1</h1>
 <h2>RPG dice とは</h2>
 RPG dice はふたば★ちゃんねるのdice機能支援のためのbookmarkletです。<br>
-スレッドを開始する際にルールを書いておくことで、ダイスの出目を見やすく整形します。
+スレッドを開始する際にルールを書いておくことで、ダイスの出目を見やすく整形します。<br>
+
+<a href="rpg-dice-sandbox.htm">rpg dice 動作確認用ページ</a>
 
 <h2>導入方法</h2>
 ページ上部のrpg dice のリンクをブラウザのブックマークバーにドラッグ＆ドロップする事でブラウザにインストールします。<br>
-dice 機能を使ったふたばのスレッドでインストールしたbookmarkをクリックすることで使用します。
+dice 機能を使ったふたばのスレッドでインストールしたbookmarkをクリックすることで使用します。<br>
 <div><img src="install-rpg.png"></div>
 スレッド内に下記のルールがある場合、そのルールにしたがって出目を整形し表示します。<br>
-ルールは１レス目にある必要はなく、最初に見つかったルールが適用されます。
+<br>
+<a href="rpg-dice-sandbox.htm">こちら</a>で導入したブックマークレットのテストができます。<br>
+"generate thread" のボタンを押した後にブックマークレットを起動してみてください。
 
 <h2>ルールの設定 (基本)</h2>
-通常はスレッドを立てる時に１レス目として書き込むことになるかと思います。<br>
+rpg dice はスレッド内で最初に見つかったルールを適用します。<br>
+ルールがスレッド本文にある必要はありませんが、通常は本文中で定義することになるかと思います。<br>
+<br>
 ルールは次のフォーマットでダイス毎に設定します。
 
 <div><img src="dice-rule1.png"></div>
@@ -27,6 +33,8 @@ dice 機能を使ったふたばのスレッドでインストールしたbookma
 #1 ATK; #2 DEF; #3 INT;
 </pre>
 <div><img src="example1.png"></div>
+区切り文字はセミコロン、またはカンマが使えます。<br>
+セミコロンの場合はパラメータが改行されて表示されますが、カンマの場合はされません。
 
 <h2>ルールの設定 (値の割り当て)</h2>
 以下のようにそれぞれの出目に特定の値を割り当てる事もできます。
@@ -52,6 +60,7 @@ dice 機能を使ったふたばのスレッドでインストールしたbookma
 <h2>注意</h2>
 ルールの中の空白は全て半角スペースです。<br>
 また値の割り当ての dice_value:out_value のコロン前後にスペースを入れてはいけません。<br>
+ダイス一つ分のルール(シャープから区切り文字(; or ,)まで)は1行で書く必要があります。
 
 <h2>その他</h2>
 rpg-dice のソースは<a href="https://github.com/gangi-man/gangi-man.github.io">ここ</a>にあります。
