--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <li><a href="gcounter-v1/index.html"> ginga counter v1.0 </a></li>
   <li><a href="rpg-dice-v11/index.html"> rpg dice v1.1 </a></li>
   <li><a href="rpg-dice-v1/index.html"> rpg dice v1.0 </a></li>
+  <li><a href="imo-dice/index.html"> ImoDice v1.0 </a></li>
 </ul>
 
 <a href="https://github.com/gangi-man/gangi-man.github.io">ソース</a>
