--- a/imo-dice/index.html
+++ b/imo-dice/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><title> imodice </title></head>
 <body>
-<a href="javascript:(function(){if(typeof(__imo_dice_disp__)==='undefined'){let%20s=document.createElement('script');s.src='https://gangi-man.github.io/imo-dice/imodice-bookmarklet-body-min-1.1.js';s.onload=function(){__imo_dice_disp__=__imo_dice__().rpg_dice_display();__imo_dice_disp__.show();};document.body.appendChild(s);}else{__imo_dice_disp__.show();}})()"> ImoDice 1.1 </a><br>
+<a href="javascript:(function(){if(typeof(__imo_dice_disp__)==='undefined'){let%20s=document.createElement('script');s.src='https://gangi-man.github.io/imo-dice/imodice-bookmarklet-body-min-1.1.js';s.onload=function(){__imo_dice_disp__=__imo_dice__().rpg_dice_display();__imo_dice_disp__.show();};document.body.appendChild(s);}else{__imo_dice_disp__.show();}})()"> ImoDice 1.1 </a> (赤福プラス対応版、ふたクロで動作しないと報告あり)<br>
 <a href="javascript:(function(){if(typeof(__imo_dice_disp__)==='undefined'){let%20s=document.createElement('script');s.src='https://gangi-man.github.io/imo-dice/imodice-latest.js';s.onload=function(){__imo_dice_disp__=__imo_dice__().rpg_dice_display();__imo_dice_disp__.show();};document.body.appendChild(s);}else{__imo_dice_disp__.show();}})()"> ImoDice 1.0 </a><br>
 
 <h1> ImoDice </h1>
