Dice editor doesn't load png.

--- a/imo-dice/index.html
+++ b/imo-dice/index.html
@@ -48,7 +48,10 @@ ImoDice (Editor) を起動するにはトップディレクトリにあるimo-di
 このプログラムはelectron で作られています。
 
 <h2>画像の読み込み</h2>
-OPEN ボタンを押してjpeg 画像を読み込みます。
+OPEN ボタンを押してjpeg 画像を読み込みます。<br>
+jpeg画像の仕様を利用しているためpngやgif 画像を読み込むことはできません。
+<div><img src="badload.png"/></div>
+
 以下ではすでにルールが設定された SAMPLES\sample1.jpg を読み込むことでImoDice の利用方法を説明します。
 
 <h2>ルールタブ</h2>
