--- a/imo-dice/index.html
+++ b/imo-dice/index.html
@@ -5,7 +5,7 @@
 <a href="javascript:(function(){if(typeof(__imo_dice_disp__)==='undefined'){let%20s=document.createElement('script');s.src='https://gangi-man.github.io/imo-dice/imodice-bookmarklet-body-min-1.1.js';s.onload=function(){__imo_dice_disp__=__imo_dice__().rpg_dice_display();__imo_dice_disp__.show();};document.body.appendChild(s);}else{__imo_dice_disp__.show();}})()"> ImoDice 1.1 </a> (赤福プラス対応版、ふたクロで動作しないと報告あり)<br>
 <a href="javascript:(function(){if(typeof(__imo_dice_disp__)==='undefined'){let%20s=document.createElement('script');s.src='https://gangi-man.github.io/imo-dice/imodice-latest.js';s.onload=function(){__imo_dice_disp__=__imo_dice__().rpg_dice_display();__imo_dice_disp__.show();};document.body.appendChild(s);}else{__imo_dice_disp__.show();}})()"> ImoDice 1.0 </a><br>
 
-<h1> ImoDice </h1>
+<h1> <img src="imo-logo.png" style="width:50px; height:50px;"/> ImoDice </h1>
 <h2>ImoDice とは</h2>
 ImoDice はふたば★ちゃんねるのdice機能支援のためのbookmarkletで<a href="https://gangi-man.github.io/rpg-dice-v11/index.html">RPG dice</a> と互換があります。<br/>
 RPG Dice ではルールを本文/スレッドに書く必要がありましたが、ImoDice ではルールをjpeg 画像の中に埋め込む事ができます。
